Updates to rest of the pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -50,33 +50,36 @@
       <!-- Nav Item - Utilities Collapse Menu -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseProducts" aria-expanded="true" aria-controls="collapseUtilities">
-          <i class="fas fa-fw fa-wrench"></i>
+          <i class="fas fa-fw fa-book"></i>
           <span>Products</span>
         </a>
         <div id="collapseProducts" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <a class="collapse-item" href="tea.html">Tea</a>
+            <a class="collapse-item" href="tea.html">
+              <i class="fas fa-fw fa-coffee"></i>
+              Tea
+            </a>
           </div>
         </div>
       </li>
 
       <li class="nav-item">
         <a class="nav-link" href="about-us.html" aria-expanded="true">
-          <i class="fas fa-fw fa-wrench"></i>
+          <i class="fas fa-fw fa-info"></i>
           <span>About Us</span>
         </a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link" href="contact-us.html" aria-expanded="true">
-          <i class="fas fa-fw fa-wrench"></i>
+          <i class="fas fa-fw fa-phone"></i>
           <span>Contact Us</span>
         </a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link" href="gallery.html" aria-expanded="true">
-          <i class="fas fa-fw fa-wrench"></i>
+          <i class="fas fa-fw fa-image"></i>
           <span>Gallery</span>
         </a>
       </li>
@@ -139,8 +142,6 @@
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
 
-  <!-- Page level plugins -->
-  <script src="vendor/chart.js/Chart.min.js"></script>
 
 </body>
 
