Add Simondou Tea pictures

--- a/tea.html
+++ b/tea.html
@@ -91,6 +91,30 @@
 
     </ul>
     <!-- End of Sidebar -->
+
+    <div class="container-fluid">
+      <!-- Page Heading -->
+      <!-- Content Row -->
+      <div class="row">
+        <div>
+          <!-- Images -->
+          <div style="height: 600px;" class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">SIMONDOU CEYLON TEA</h6>
+            </div>
+            <div class="card-body">
+              <div style="height: 80%;" class="chart-area">
+                <img style="max-width: 30%; height: 50%; padding-right: 5%;" src="img/25 BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;  padding-right: 5%;" src="img/100 tb BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;  padding-right: 5%;" src="img/SIMONDOU 225g PACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;  padding-right: 5%;" src="img/SIMONDOU 300g TIN.jpg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/SIMONDOU 450g PACK.jpg"></img>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     
       <!-- Footer -->
       <footer class="sticky-footer bg-white">
@@ -101,10 +125,12 @@
         </div>
       </footer>
       <!-- End of Footer -->
-
     </div>
     <!-- End of Content Wrapper -->
 
+    
+  </div>
+  <!-- /.container-fluid -->
   </div>
   <!-- End of Page Wrapper -->
 
