Updates to Contact Us/Gallery/Tea

--- a/contact-us.html
+++ b/contact-us.html
@@ -91,7 +91,24 @@
 
     </ul>
     <!-- End of Sidebar -->
-    
+    <div class="container-fluid">
+      <!-- Page Heading -->
+      <!-- Content Row -->
+      <div>
+        <!-- Contact us card -->
+        <div  class="card shadow mb-4">
+          <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">CONTACT US</h6>
+          </div>
+          <div class="card-body">
+            <div>Kitchener, ON, Canada</div>
+            <div>For business enquiries, please contact us at: </div>
+            <div><b>Phone:</b> (226) 899-1600</div>
+            <div><b>Email:</b> sales@orionsalescanada.com</div>
+          </div>
+        </div>
+      </div>
+
       <!-- Footer -->
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
