--- a/gallery.html
+++ b/gallery.html
@@ -92,6 +92,29 @@
     </ul>
     <!-- End of Sidebar -->
     
+    <div class="container-fluid">
+      <!-- Page Heading -->
+      <!-- Content Row -->
+      <div class="row">
+        <div>
+          <!-- Images -->
+          <div style="height: 600px;" class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">IMAGES</h6>
+            </div>
+            <div class="card-body">
+              <div class="chart-area">
+                <img style="max-width: 30%; height: 50%;" src="img/25 BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/100 tb BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 225g PACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 300g TIN.jpg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/SIMONDOU 450g PACK.jpg"></img>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- Footer -->
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
