--- a/tea.html
+++ b/tea.html
@@ -103,12 +103,12 @@
               <h6 class="m-0 font-weight-bold text-primary">SIMONDOU CEYLON TEA</h6>
             </div>
             <div class="card-body">
-              <div style="height: 80%;" class="chart-area">
-                <img style="max-width: 30%; height: 50%; padding-right: 5%;" src="img/25 BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;  padding-right: 5%;" src="img/100 tb BLACK.jpg"></img>
+              <div class="chart-area">
+                <img style="max-width: 30%; height: 50%;" src="img/25 BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/100 tb BLACK.jpg"></img>
                 <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;  padding-right: 5%;" src="img/SIMONDOU 225g PACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;  padding-right: 5%;" src="img/SIMONDOU 300g TIN.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 225g PACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 300g TIN.jpg"></img>
                 <img style="max-width: 30%; height: 50%" src="img/SIMONDOU 450g PACK.jpg"></img>
               </div>
             </div>
