Add button to download slides

--- a/tea.html
+++ b/tea.html
@@ -100,7 +100,10 @@
           <!-- Images -->
           <div style="height: 600px;" class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">SIMONDOU CEYLON TEA</h6>
+              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">SIMONDOU CEYLON TEA</h6>
+              <a href="slides/Simondou_Ceylon_Tea.pdf" target="_blank" style="float: right" class="btn btn-circle btn-sm">
+                <i class="fas fa-download"></i>
+              </a>
             </div>
             <div class="card-body">
               <div class="chart-area">
