--- a/contact-us.html
+++ b/contact-us.html
@@ -105,6 +105,33 @@
             <div>For business enquiries, please contact us at: </div>
             <div><b>Phone:</b> (226) 899-1600</div>
             <div><b>Email:</b> sales@orionsalescanada.com</div>
+            <form action="https://formspree.io/f/xnqobvyw" method="POST">
+              <label>
+                Name:
+                <br/>
+                <input type="text" name="name" placeholder="Name" required>
+              </label>
+              <br/>
+              <label>
+                Email:
+                <br/>
+                <input type="text" name="email" placeholder="Email" required>
+              </label>
+              <br/>
+              <label>
+                Phone:
+                <br/>
+                <input type="text" name="phone" placeholder="Phone" required>
+              </label>       
+              <br/>    
+              <label>
+                Message:
+                <br/>
+                <textarea cols="100" rows="5" name="message" placeholder="Message" required></textarea>
+              </label>       
+              <br/>   
+              <button type="submit">Send</button>
+          </form>
           </div>
         </div>
       </div>
