--- a/tea.html
+++ b/tea.html
@@ -101,12 +101,12 @@
           <div style="height: 600px;" class="card shadow mb-4">
             <div class="card-header py-3">
               <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">SIMONDOU CEYLON TEA</h6>
-              <a href="slides/Simondou_Ceylon_Tea.pdf" target="_blank" style="float: right" class="btn btn-circle btn-sm">
-                <i class="fas fa-download"></i>
-              </a>
             </div>
             <div class="card-body">
               <div class="chart-area">
+                <div>DOWNLOAD</div>
+                <button style="width: 30%;" onclick="openSlides()"><img style="width: 100%; height: 100%;" src="img/thumbnail.PNG"></button>
+                <br/>
                 <img style="max-width: 30%; height: 50%;" src="img/25 BLACK.jpg"></img>
                 <img style="max-width: 30%; height: 50%;" src="img/100 tb BLACK.jpg"></img>
                 <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
@@ -170,6 +170,8 @@
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
+  <script src="js/tea.js"></script>
+
 
 
 </body>
