--- a/tea.html
+++ b/tea.html
@@ -102,18 +102,20 @@
             <div class="card-header py-3">
               <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">SIMONDOU CEYLON TEA</h6>
             </div>
-            <div class="card-body">
-              <div class="chart-area">
-                <div>DOWNLOAD</div>
-                <button style="width: 30%;" onclick="openSlides()"><img style="width: 100%; height: 100%;" src="img/thumbnail.PNG"></button>
-                <br/>
-                <img style="max-width: 30%; height: 50%;" src="img/25 BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/100 tb BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 225g PACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 300g TIN.jpg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/SIMONDOU 450g PACK.jpg"></img>
-              </div>
+            <div style="overflow: scroll;" class="card-body">
+              <div>DOWNLOAD</div>
+              <button style="width: 30%;" onclick="openSlides()"><img style="width: 100%; height: 100%;" src="img/thumbnail.PNG"></button>  
+              <br/>
+              <br/>
+              <iframe width="420" height="315" src="https://www.youtube.com/embed/PHjUOaoAXjI" allowfullscreen></iframe>
+              <br/>
+              <br/>
+              <img style="max-width: 30%; height: 50%;" src="img/25 BLACK.jpg"></img>
+              <img style="max-width: 30%; height: 50%;" src="img/100 tb BLACK.jpg"></img>
+              <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
+              <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 225g PACK.jpg"></img>
+              <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 300g TIN.jpg"></img>
+              <img style="max-width: 30%; height: 50%" src="img/SIMONDOU 450g PACK.jpg"></img>  
             </div>
           </div>
         </div>
