--- a/indian_snacks.html
+++ b/indian_snacks.html
@@ -100,26 +100,46 @@
       <!-- Page Heading -->
       <!-- Content Row -->
       <div class="row">
-        <div>
+        <div style="display: contents;">
           <!-- Images -->
-          <div style="height: 600px;" class="card shadow mb-4">
+          <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">SIMONDOU CEYLON TEA</h6>
+              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">CHAKLI</h6>
             </div>
-            <div style="overflow: scroll;" class="card-body">
-              <div>DOWNLOAD</div>
-              <button style="width: 30%;" onclick="openSlides()"><img style="width: 100%; height: 100%;" src="img/thumbnail.PNG"></button>  
-              <br/>
-              <br/>
-              <iframe width="420" height="315" src="https://www.youtube.com/embed/PHjUOaoAXjI" allowfullscreen></iframe>
-              <br/>
-              <br/>
-              <img style="max-width: 30%; height: 50%;" src="img/25 BLACK.jpg"></img>
-              <img style="max-width: 30%; height: 50%;" src="img/100 tb BLACK.jpg"></img>
-              <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
-              <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 225g PACK.jpg"></img>
-              <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 300g TIN.jpg"></img>
-              <img style="max-width: 30%; height: 50%" src="img/SIMONDOU 450g PACK.jpg"></img>  
+            <div class="card-body">
+              <img style="height: 100%; width: 100%;" src="img/Chakli.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">CHIWDA</h6>
+            </div>
+            <div class="card-body">
+              <img style="height: 100%; width: 100%" src="img/chiwda.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">GARLIC SEV</h6>
+            </div>
+            <div class="card-body">
+              <img style="height: 100%; width: 100%" src="img/garlic_sev.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">HOT SEV</h6>
+            </div>
+            <div class="card-body">
+              <img style="height: 100%; width: 100%" src="img/hot_sev.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">SHANKARPALI</h6>
+            </div>
+            <div class="card-body">
+              <img style="height: 100%; width: 100%" src="img/shakkarpara.jpeg"></img>  
             </div>
           </div>
         </div>
