--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,10 @@
               <i class="fas fa-fw fa-coffee"></i>
               Tea
             </a>
+            <a class="collapse-item" href="indian_snacks.html">
+              <i class="fas fa-fw fa-hamburger"></i>
+              Indian Snacks
+            </a>
           </div>
         </div>
       </li>
