--- a/indian_snacks.html
+++ b/indian_snacks.html
@@ -104,7 +104,7 @@
           <!-- Images -->
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">CHAKLI</h6>
+              <h6 class="m-0 font-weight-bold text-primary">BHAJANI CHAKLI</h6>
             </div>
             <div class="card-body">
               <img style="height: 100%; width: 100%;" src="img/Chakli.jpeg"></img>  
@@ -112,7 +112,7 @@
           </div>
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">CHIWDA</h6>
+              <h6 class="m-0 font-weight-bold text-primary">NYLON CHIWDA</h6>
             </div>
             <div class="card-body">
               <img style="height: 100%; width: 100%" src="img/chiwda.jpeg"></img>  
@@ -120,7 +120,7 @@
           </div>
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">GARLIC SEV</h6>
+              <h6 class="m-0 font-weight-bold text-primary">GARLIC SEV</h6>
             </div>
             <div class="card-body">
               <img style="height: 100%; width: 100%" src="img/garlic_sev.jpeg"></img>  
@@ -128,7 +128,7 @@
           </div>
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">HOT SEV</h6>
+              <h6 class="m-0 font-weight-bold text-primary">HOT SEV</h6>
             </div>
             <div class="card-body">
               <img style="height: 100%; width: 100%" src="img/hot_sev.jpeg"></img>  
@@ -136,7 +136,7 @@
           </div>
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 style="float:  left;" class="m-0 font-weight-bold text-primary">SHANKARPALI</h6>
+              <h6 class="m-0 font-weight-bold text-primary">SHANKARPALI</h6>
             </div>
             <div class="card-body">
               <img style="height: 100%; width: 100%" src="img/shakkarpara.jpeg"></img>  
