--- a/indian_snacks.html
+++ b/indian_snacks.html
@@ -102,44 +102,66 @@
       <div class="row">
         <div style="display: contents;">
           <!-- Images -->
-          <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">BHAJANI CHAKLI</h6>
-            </div>
+          <div style="height: 100%; margin-right: 5%; width: 90%;" class="card shadow mb-4">
             <div class="card-body">
-              <img style="height: 100%; width: 100%;" src="img/Chakli.jpeg"></img>  
+              <img style="height: 100%; width: 100%;" src="img/indian_snacks/garden/garden_logo.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 70%;" class="card shadow mb-4">
+            <div class="card-body">
+              <img style="height: 100%; width: 100%;" src="img/indian_snacks/garden/garden_1.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 70%;" class="card shadow mb-4">
+            <div class="card-body">
+              <img style="height: 100%; width: 100%;" src="img/indian_snacks/garden/garden_2.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 70%;" class="card shadow mb-4">
+            <div class="card-body">
+              <img style="height: 100%; width: 100%;" src="img/indian_snacks/garden/garden_3.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 70%;" class="card shadow mb-4">
+            <div class="card-body">
+              <img style="height: 100%; width: 100%;" src="img/indian_snacks/garden/garden_4.jpeg"></img>  
+            </div>
+          </div>
+          <div style="height: 100%; margin-right: 5%; width: 70%;" class="card shadow mb-4">
+            <div class="card-body">
+              <img style="height: 100%; width: 100%;" src="img/indian_snacks/garden/garden_5.jpeg"></img>  
+            </div>
+          </div>
+          <br/>
+          <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
+            <div class="card-body">
+              <img style="height: 100%; width: 100%;" src="img/indian_snacks/vishnu/chakali.jpeg"></img>  
             </div>
           </div>
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">NYLON CHIWDA</h6>
-            </div>
             <div class="card-body">
-              <img style="height: 100%; width: 100%" src="img/chiwda.jpeg"></img>  
+              <img style="height: 100%; width: 100%" src="img/indian_snacks/vishnu/chivada.jpeg"></img>  
             </div>
           </div>
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">GARLIC SEV</h6>
-            </div>
             <div class="card-body">
-              <img style="height: 100%; width: 100%" src="img/garlic_sev.jpeg"></img>  
+              <img style="height: 100%; width: 100%" src="img/indian_snacks/vishnu/garlic_sev.jpeg"></img>  
             </div>
           </div>
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">HOT SEV</h6>
-            </div>
             <div class="card-body">
-              <img style="height: 100%; width: 100%" src="img/hot_sev.jpeg"></img>  
+              <img style="height: 100%; width: 100%" src="img/indian_snacks/vishnu/plain_sev.jpeg"></img>  
             </div>
           </div>
           <div style="height: 100%; margin-right: 5%; width: 40%;" class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">SHANKARPALI</h6>
-            </div>
             <div class="card-body">
-              <img style="height: 100%; width: 100%" src="img/shakkarpara.jpeg"></img>  
+              <img style="height: 100%; width: 100%" src="img/indian_snacks/vishnu/shankarpali.jpeg"></img>  
+            </div>
+          </div>
+          <br/>
+          <div style="height: 100%; margin-right: 5%; width: 90%;" class="card shadow mb-4">
+            <div class="card-body">
+              <img style="height: 100%; width: 100%" src="img/indian_snacks/vishnu/sale.jpeg"></img>  
             </div>
           </div>
         </div>
