--- a/tea.html
+++ b/tea.html
@@ -108,18 +108,18 @@
             </div>
             <div style="overflow: scroll;" class="card-body">
               <div>DOWNLOAD</div>
-              <button style="width: 30%;" onclick="openSlides()"><img style="width: 100%; height: 100%;" src="img/thumbnail.PNG"></button>  
+              <button style="width: 30%;" onclick="openSlides()"><img style="width: 100%; height: 100%;" src="img/tea/simondou/thumbnail.PNG"></button>  
               <br/>
               <br/>
               <iframe width="420" height="315" src="https://www.youtube.com/embed/PHjUOaoAXjI" allowfullscreen></iframe>
               <br/>
               <br/>
-              <img style="max-width: 30%; height: 50%;" src="img/25 BLACK.jpg"></img>
-              <img style="max-width: 30%; height: 50%;" src="img/100 tb BLACK.jpg"></img>
-              <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
-              <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 225g PACK.jpg"></img>
-              <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 300g TIN.jpg"></img>
-              <img style="max-width: 30%; height: 50%" src="img/SIMONDOU 450g PACK.jpg"></img>  
+              <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/25 BLACK.jpg"></img>
+              <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/100 tb BLACK.jpg"></img>
+              <img style="max-width: 30%; height: 50%" src="img/tea/simondou/50tb  BLACK.jpg"></img>
+              <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/SIMONDOU 225g PACK.jpg"></img>
+              <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/SIMONDOU 300g TIN.jpg"></img>
+              <img style="max-width: 30%; height: 50%" src="img/tea/simondou/SIMONDOU 450g PACK.jpg"></img>  
             </div>
           </div>
         </div>
