--- a/gallery.html
+++ b/gallery.html
@@ -102,18 +102,34 @@
       <div class="row">
         <div>
           <!-- Images -->
-          <div style="height: 600px;" class="card shadow mb-4">
+          <div style="height: 900px;" class="card shadow mb-4">
             <div class="card-header py-3">
               <h6 class="m-0 font-weight-bold text-primary">IMAGES</h6>
             </div>
             <div class="card-body">
               <div class="chart-area">
-                <img style="max-width: 30%; height: 50%;" src="img/25 BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/100 tb BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/50tb  BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 225g PACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/SIMONDOU 300g TIN.jpg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/SIMONDOU 450g PACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/25 BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/100 tb BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/tea/simondou/50tb  BLACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/SIMONDOU 225g PACK.jpg"></img>
+                <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/SIMONDOU 300g TIN.jpg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/tea/simondou/SIMONDOU 450g PACK.jpg"></img>
+                <br/>
+                <br/>
+                <br/>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/shankarpali.jpeg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/chakali.jpeg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/chivada.jpeg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/garlic_sev.jpeg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/plain_sev.jpeg"></img>
+                <br/>
+                <br/>
+                <br/>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_1.jpeg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_2.jpeg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_3.jpeg"></img>
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_4.jpeg"></img>  
+                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_5.jpeg"></img>              
               </div>
             </div>
           </div>
