--- a/indian_snacks.html
+++ b/indian_snacks.html
@@ -102,9 +102,9 @@
       <div class="row">
         <div style="display: contents;">
           <!-- Images -->
-          <div style="height: 100%; margin-right: 5%; width: 90%;" class="card shadow mb-4">
+          <div style="height: 100%; margin-right: 5%; width: 70%;" class="card shadow mb-4">
             <div class="card-body">
-              <img style="height: 100%; width: 100%;" src="img/indian_snacks/garden/garden_logo.jpeg"></img>  
+              <img style="height: 100%; width: 60%; margin-left: 20%;" src="img/indian_snacks/garden/garden_logo.jpeg"></img>  
             </div>
           </div>
           <div style="height: 100%; margin-right: 5%; width: 70%;" class="card shadow mb-4">
