--- a/contact-us.html
+++ b/contact-us.html
@@ -107,7 +107,7 @@
           <div class="card-body">
             <div>Kitchener, ON, Canada</div>
             <div>For business enquiries, please contact us at: </div>
-            <div><b>Phone:</b> (226) 899-1600</div>
+            <div><b>Phone:</b> (226) 899-1600 / (519) 781-1035</div>
             <div><b>Email:</b> sales@orionsalescanada.com</div>
             <form action="https://formspree.io/f/xnqobvyw" method="POST">
               <label>
@@ -144,7 +144,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Orion Sales Canada 2020</span>
+            <span>Copyright &copy; Orion Sales Canada 2022</span>
           </div>
         </div>
       </footer>
