--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/custom.css">
 
 </head>
 
@@ -95,12 +96,21 @@
 
     </ul>
     <!-- End of Sidebar -->
-    
+    <div class="container-fluid">  
+      <div class="row">
+        <div>
+          <!-- Images -->
+          <img style="width: 65%; margin-left: 20%; margin-top: 2%; border: 4px solid black" src="img/indian_snacks/garden/pres_1.jpg"></img>
+          <img style="width: 65%; margin-left: 20%; margin-top: 2%; border: 4px solid black" src="img/indian_snacks/garden/pres_2.jpg"></img>
+          <img style="width: 65%; margin-left: 20%; margin-top: 2%; border: 4px solid black" src="img/indian_snacks/garden/pres_3.jpg"></img>
+        </div>
+      </div>
+  
       <!-- Footer -->
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Orion Sales Canada 2020</span>
+            <span>Copyright &copy; Orion Sales Canada 2022</span>
           </div>
         </div>
       </footer>
@@ -145,7 +155,6 @@
 
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
-
 
 </body>
 
