--- a/tea.html
+++ b/tea.html
@@ -17,7 +17,8 @@
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="css/custom.css">
+  
 </head>
 
 <body id="page-top">
