--- a/gallery.html
+++ b/gallery.html
@@ -103,36 +103,61 @@
       <div class="row">
         <div>
           <!-- Images -->
-          <div style="height: 900px;" class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">IMAGES</h6>
-            </div>
-            <div class="card-body">
-              <div class="chart-area">
-                <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/25 BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/100 tb BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/tea/simondou/50tb  BLACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/SIMONDOU 225g PACK.jpg"></img>
-                <img style="max-width: 30%; height: 50%;" src="img/tea/simondou/SIMONDOU 300g TIN.jpg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/tea/simondou/SIMONDOU 450g PACK.jpg"></img>
-                <br/>
-                <br/>
-                <br/>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/shankarpali.jpeg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/chakali.jpeg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/chivada.jpeg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/garlic_sev.jpeg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/vishnu/plain_sev.jpeg"></img>
-                <br/>
-                <br/>
-                <br/>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_1.jpeg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_2.jpeg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_3.jpeg"></img>
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_4.jpeg"></img>  
-                <img style="max-width: 30%; height: 50%" src="img/indian_snacks/garden/garden_5.jpeg"></img>              
-              </div>
-            </div>
+          <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">IMAGES</h6>
+          </div>
+          <img style="max-width: 94%; border: 4px solid black; margin-top: 1%; margin-right: 4%;" src="img/indian_snacks/garden/meme_0.jpg"></img>
+          <div style="display: flex;">
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%; margin-right: 4%;" src="img/indian_snacks/garden/meme_1.jpg"></img>
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%" src="img/indian_snacks/garden/meme_2.jpg"></img>  
+          </div>
+          <div style="display: flex;">
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%; margin-right: 4%;" src="img/indian_snacks/garden/meme_3.jpg"></img>
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%" src="img/indian_snacks/garden/meme_4.jpg"></img>  
+          </div>
+          <div style="display: flex;">
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%; margin-right: 4%;" src="img/indian_snacks/garden/meme_5.jpg"></img>
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%" src="img/indian_snacks/garden/meme_6.jpg"></img>  
+          </div>
+          <div style="display: flex;">
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/garden/meme_7.jpg"></img>
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%;  margin-right: 2%;" src="img/indian_snacks/garden/meme_8.jpg"></img>  
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%;" src="img/indian_snacks/garden/meme_13.jpg"></img>
+          </div>
+          <img style="max-width: 94%; border: 4px solid black; margin-top: 1%; margin-right: 4%;" src="img/indian_snacks/garden/meme_9.jpg"></img>
+          <div style="display: flex;">
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%; margin-right: 4%;" src="img/indian_snacks/garden/meme_10.jpg"></img>
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%" src="img/indian_snacks/garden/meme_11.jpg"></img>  
+          </div>
+          <img style="border: 4px solid black; margin-top: 1%; margin-left: 11%;" src="img/indian_snacks/garden/meme_12.jpg"></img>
+          <div style="display: flex;">
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/garden/meme_14.jpg"></img>
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%;  margin-right: 2%;" src="img/indian_snacks/garden/meme_15.jpg"></img>  
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%;" src="img/indian_snacks/garden/meme_16.jpg"></img>
+          </div>
+          <div style="display: flex;">
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/tea/simondou/25 BLACK.jpg"></img>
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/tea/simondou/100 tb BLACK.jpg"></img>  
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%" src="img/tea/simondou/50tb  BLACK.jpg"></img>  
+          </div>
+          <div style="display: flex;">
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/tea/simondou/SIMONDOU 225g PACK.jpg"></img>
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/tea/simondou/SIMONDOU 300g TIN.jpg"></img>  
+            <img style="max-width: 30%; border: 4px solid black; margin-top: 1%" src="img/tea/simondou/SIMONDOU 450g PACK.jpg"></img>  
+          </div>
+          <div style="display: flex;">
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/vishnu/shankarpali.jpeg"></img>
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/vishnu/chakali.jpeg"></img>  
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/vishnu/chivada.jpeg"></img>  
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/vishnu/garlic_sev.jpeg"></img>  
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/vishnu/plain_sev.jpeg"></img>  
+          </div>
+          <div style="display: flex;">
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/garden/garden_1.jpeg"></img>
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/garden/garden_2.jpeg"></img>  
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/garden/garden_3.jpeg"></img>  
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/garden/garden_4.jpeg"></img>  
+            <img style="max-width: 15%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/indian_snacks/garden/garden_5.jpeg"></img>  
           </div>
         </div>
       </div>
@@ -156,26 +181,7 @@
   <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
   </a>
-
-  <!-- Logout Modal-->
-  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
