--- a/contact-us.html
+++ b/contact-us.html
@@ -3,14 +3,16 @@
 
 <head>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-N28HEPCB2G"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J39F303FYN"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-N28HEPCB2G');
+    gtag('config', 'G-J39F303FYN');
   </script>
+
   
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
