--- a/gallery.html
+++ b/gallery.html
@@ -146,6 +146,10 @@
             <img style="max-width: 30%; border: 4px solid black; margin-top: 1%;" src="img/indian_snacks/garden/meme_16.jpg"></img>
           </div>
           <div style="display: flex;">
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%; margin-right: 4%;" src="img/indian_snacks/garden/meme_17.jpg"></img>
+            <img style="max-width: 45%; border: 4px solid black; margin-top: 1%;  margin-right: 4%;" src="img/indian_snacks/garden/meme_18.jpg"></img>  
+          </div>
+          <div style="display: flex;">
             <img style="max-width: 30%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/tea/simondou/25 BLACK.jpg"></img>
             <img style="max-width: 30%; border: 4px solid black; margin-top: 1%; margin-right: 2%;" src="img/tea/simondou/100 tb BLACK.jpg"></img>  
             <img style="max-width: 30%; border: 4px solid black; margin-top: 1%" src="img/tea/simondou/50tb  BLACK.jpg"></img>  
