--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
           <img style="width: 65%; margin-left: 20%; margin-top: 2%; border: 4px solid black" src="img/indian_snacks/garden/pres_2.jpg"></img>
           <img style="width: 65%; margin-left: 20%; margin-top: 2%; border: 4px solid black" src="img/indian_snacks/garden/pres_3.jpg"></img>
           <img style="width: 65%; margin-left: 20%; margin-top: 2%; border: 4px solid black" src="img/indian_snacks/garden/pres_4.jpg"></img>          
+          <img style="width: 65%; margin-left: 20%; margin-top: 2%; border: 4px solid black" src="img/indian_snacks/garden/pres_5.jpg"></img>          
         </div>
       </div>
   
