--- a/contact-us.html
+++ b/contact-us.html
@@ -79,12 +79,12 @@
         </div>
       </li>
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="about-us.html" aria-expanded="true">
           <i class="fas fa-fw fa-info"></i>
           <span>About Us</span>
         </a>
-      </li>
+      </li> -->
 
       <li class="nav-item">
         <a class="nav-link" href="contact-us.html" aria-expanded="true">
